--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.0",
+    "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-window-state": "~2",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
