Update project structure and enhance user interface
- Added production build scripts in package.json for streamlined deployment.
- Expanded README.md to provide a comprehensive overview of the Video Optimizer application, including features, technologies, and installation instructions.
- Updated HTML templates across various components to improve accessibility and user experience by translating comments and labels from French to English.
- Enhanced Tauri configuration for better window management and user interface layout.

These changes aim to improve the overall usability and maintainability of the application.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build:prod": "ng build --configuration production",
+    "build:appimage": "npm run build:prod && tauri build --target appimage"
   },
   "private": true,
   "dependencies": {
