--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,8 @@ tauri-plugin-fs = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-http = "2"
 tokio = { version = "1", features = ["full"] }
+lazy_static = "1.4"
+ffmpeg-next = "7.1.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-window-state = "2"
