Add testing infrastructure and improve test coverage for video optimizer
- Introduced a comprehensive testing setup including Karma configuration and necessary polyfills for Angular 20.
- Added multiple test files for services such as ConversionService, FilesManagerService, and NotificationService, enhancing test coverage and reliability.
- Implemented mock utilities for Tauri commands to facilitate testing without actual dependencies.
- Created a detailed TODO list for future tests, outlining phases and coverage goals to ensure robust testing practices.

These changes aim to establish a solid foundation for testing, improving code quality and maintainability in the Video Optimizer application.

--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,16 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "polyfills": [
+              "src/polyfills.ts"
+            ]
+          }
         }
       }
     }
