Refactor testing setup and remove obsolete files
- Removed outdated testing files including karma.conf.js, tsconfig.spec.json, polyfills.ts, and various mock and test helper files to streamline the testing infrastructure.
- Updated angular.json to reflect the removal of polyfills and adjusted Karma configuration options.
- Added @angular-devkit/build-angular dependency to ensure compatibility with the latest Angular testing practices.

These changes aim to simplify the testing environment and improve maintainability of the codebase.

--- a/angular.json
+++ b/angular.json
@@ -72,10 +72,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "polyfills": [
-              "src/polyfills.ts"
-            ]
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
