--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,8 +18,14 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+regex = "1.12.2"
+tokio = { version = "1.48.0", features = ["process", "io-util", "rt-multi-thread", "macros"] }
+reqwest = { version = "0.12.24", features = ["json", "blocking"] }
+tauri-plugin-dialog = "2.4.2"
+tauri-plugin-store = "2.4.1"
+tauri-plugin-notification = "2.3.3"
 
