--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,5 @@ reqwest = { version = "0.12.24", features = ["json", "blocking"] }
 tauri-plugin-dialog = "2.4.2"
 tauri-plugin-store = "2.4.1"
 tauri-plugin-notification = "2.3.3"
+once_cell = "1.21.3"
 
