feat: Rename project to video-optimizer, update to version 1.0.0, enhance Snapcraft configuration, and refine UI select styling.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,20 @@ dist-ssr
 
 # Flatpak
 flatpak/
+
+# Snap
+# snap/ <- Removed to track snapcraft.yaml
+parts/
+stage/
+prime/
+*.snap
+
+# Media
+*.mkv
+*.mp4
+*.avi
+
+# Misc
+coverage/
+.env
+.env.*
