--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,6 @@ tauri-plugin-store = "2.4.1"
 tauri-plugin-notification = "2.3.3"
 once_cell = "1.21.3"
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser", "dwmapi"] }
+
