--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,5 +31,6 @@ tauri-plugin-notification = "2.3.3"
 once_cell = "1.21.3"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winuser", "dwmapi"] }
+winapi = { version = "0.3", features = ["winuser", "dwmapi", "uxtheme"] }
+raw-window-handle = "0.6"
 
