--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "generate-icon": "node scripts/generate-icon.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
@@ -32,8 +33,10 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "to-ico": "^1.1.5",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   }
