--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-optimizer",
   "private": true,
-  "version": "2.0.6",
+  "version": "2.0.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-notification": "^2.3.3",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
